--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,5 @@ spring.servlet.multipart.max-file-size=128MB
 spring.servlet.multipart.max-request-size=128MB
 spring.servlet.multipart.enabled=true
 logdemo.storage.path=/tmp
-logdemo.field.separator=|
+logdemo.field.separator=\\|
+server.port=8080
